<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    android:padding="12dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/list_request_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/text"
        android:text="@string/list_request_name"/>
    <TextView
        android:id="@+id/list_request_serviceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/text"
        android:text="@string/list_request_serviceName"/>
    <TextView
        android:id="@+id/list_request_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/list_request_location"/>


</LinearLayout>